@@ -1,3 +1,8 @@
+2005-02-14  Paolo Bonzini  <bonzini@gnu.org>
+
+	PR bootstrap/19818
+	* ansidecl.h (PARAMS): Guard from redefinition.
+
 2005-02-03  Alan Modra  <amodra@bigpond.net.au>
 
 	* bfdlink.h (struct bfd_link_hash_entry): Add u.undef.weak.
